# khaos-web-ui-bootstrap

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  PHASE2A_COMPLETION.md  PRD.md  README-PHASE2A.md  README.md  SRS.md  TESTING_REPORT.md  justfile  justfile-webui  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.claude/commands/: bug.md  chore.md  debug-gh-workflows.md  feature.md  install.md  maintenance.md  plan.md  plan_w_team.md  prime.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  IPC_PROTOCOL.md  KSPD_PROJECT_STRUCTURE.md
shared/: index.ts  package.json
shared/components/: index.ts
shared/composables/: index.ts
shared/stores/: index.ts
shared/styles/: index.css
shared/types/: index.ts
specs/: chore-project-creation-flow.md  dashboard-window-implementation-plan.md  phase-2-bootstrap-implementation-v2.md  phase-2-bootstrap-implementation.md  projects-window-feature-plan.md  settings-window-implementation-plan.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: dashboard.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: dashboard.rs  import.rs  mod.rs  projects.rs  settings.rs  system.rs  windows.rs
src-tauri/src/services/: config.rs  dashboard.rs  discovery.rs  export.rs  import.rs  keychain.rs  mod.rs  settings.rs
src-tauri/src/wfl_client/: mod.rs  protocol.rs  transport_unix.rs  transport_windows.rs
windows/dashboard/: app.vue  eslint.config.js  nuxt.config.ts  package.json
(+56 files in other folders)
