[package]
name = "khaos-web-ui"
version = "0.0.2"
edition = "2021"
rust-version = "1.70"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
tokio-util = "0.7"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "winnt", "namedpipeapi"] }

[build-dependencies]
tauri-build = "2.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
